[package]
name = "cargo-bak"
version = "0.1.5"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/cargo-bak"
description = "backup and restore $CARGO_HOME cache to cargo_bak.zip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = {version="0.6",features=["zstd"]}
clap = {version="4",features=["derive"]}
anyhow = "1"
walkdir = "2"